--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /AutoGenEpoService/AutoGenEpoService/bin/Debug
 /AutoGenEpoService/.vs
 /AutoGenEpoService/AutoGenEpoService/obj
+/AutoGenEpoService/Tools
